--- a/BHF-grad-task/Views/Donate/Delete.cshtml
+++ b/BHF-grad-task/Views/Donate/Delete.cshtml
@@ -11,6 +11,30 @@
     <h4>Donation</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.Money)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Money)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.DonationDate)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.DonationDate)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Regularity)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Regularity)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
