--- a/BHF-grad-task/Views/Donate/Index.cshtml
+++ b/BHF-grad-task/Views/Donate/Index.cshtml
@@ -11,11 +11,29 @@
 </p>
 <table class="table">
     <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Money)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DonationDate)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Regularity)
+        </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.Money)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.DonationDate)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Regularity)
+        </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.DonationID }) |
             @Html.ActionLink("Details", "Details", new { id=item.DonationID }) |
