--- a/BHF-grad-task/Content/Site.css
+++ b/BHF-grad-task/Content/Site.css
@@ -9,6 +9,10 @@
     padding-right: 15px;
 }
 
+table {
+    margin-top:20em;
+}
+
 /* Override the default bootstrap behavior where horizontal description lists 
    will truncate terms that are too long to fit in the left column 
 */
@@ -21,4 +25,13 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+
+.radioImage {
+    position: relative;
+}
+
+.radioImage span {
+    position: absolute;
+    margin-top: 1em;
 }
