--- a/BHF-grad-task/Content/Site.css
+++ b/BHF-grad-task/Content/Site.css
@@ -1,5 +1,4 @@
 ﻿* {
-  
 }
 
 body {
@@ -14,7 +13,7 @@ body {
 }
 
 table {
-    margin-top:20em;
+    margin-top: 20em;
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
@@ -33,38 +32,36 @@ textarea {
 
 #wrapper, #wrapper2 {
     /*border: 1px solid rgba(0, 0, 0, 0.3);*/
-    
 }
 
 .radioImage {
     /*border: 1px solid rgba(0, 0, 0, 0.3);*/
-    position: relative;    
+    position: relative;
     max-width: 350px;
     background-color: red;
     /*max-height: 200px;*/
 }
 
-.radioImage img {
-    max-width: 100%;
-    max-height: 100%;
-    height: auto;
-    width: auto;
-    /*display: block;*/
-    margin-bottom: 0.5em;
-    /*padding-top: 1.5em;*/
+    .radioImage img {
+        max-width: 100%;
+        max-height: 100%;
+        height: auto;
+        width: auto;
+        /*display: block;*/
+        margin-bottom: 0.5em;
+        /*padding-top: 1.5em;*/
+    }
 
-}
+    .radioImage span, h3 {
+        background-color: red;
+        color: white;
+    }
 
-.radioImage span, h3 {
-    background-color: red;
-    color: white;
-}
-
-.radioImage span {
-    /*border: 1px solid rgba(0, 0, 0, 0.3);*/
-    font-size: large;
-    /*margin-top: 1em;*/
-}
+    .radioImage span {
+        /*border: 1px solid rgba(0, 0, 0, 0.3);*/
+        font-size: large;
+        /*margin-top: 1em;*/
+    }
 
 .otherAmount {
     margin-top: 5em;
@@ -80,15 +77,57 @@ textarea {
     /*padding-left: 10em;*/
 }
 
-.withPound input {
-    padding-left: 1em;
-}
+    .withPound input {
+        margin-left: 1px;
+        padding-left: 1em;
+    }
 
 .poundSign {
     position: relative;
+    padding-left: 2px;
     margin-right: -1em;
     z-index: 1;
+    font-size: 16px;
 }
+
+/*.title {
+    font-size: 15px;
+}*/
+
+.title select {
+    margin-left: 4em;
+}
+
+.forename input {
+    margin-left: 13px;
+}
+
+.surname input {
+    margin-left: 15px;
+}
+
+.title, .forename, .surname {
+    /*max-width: 70px;*/
+    font-size: 15px;
+}
+
+#name {
+    background-color: #f0f0ef;
+    background: -webkit-gradient(linear, left top, left bottom, from(#f0f0ef), to(#000000));
+    background: -webkit-linear-gradient(top, #f0f0ef 100%, #000000);
+    background: -moz-linear-gradient(top, #f0f0ef, #000000);
+    background: -o-linear-gradient(top, #f0f0ef, #000000);
+    /*background-color: #1d1e21; Old browsers 
+background-image: -moz-linear-gradient(top, #1d1e21 100%, #000000 100%);  FF3.6-15 
+background-image: -webkit-linear-gradient(top, #1d1e21 100%,#000000 100%);  Chrome10-25,Safari5.1-6 
+background-image: linear-gradient(to bottom, #1d1e21 100%,#000000 100%);  W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ 
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1d1e21', endColorstr='#000000',GradientType=0 ); IE6-9 */
+}
+
+    #name p {
+        max-width: 4.5em;
+        margin-top: 1em;
+    }
 
 h3 {
     /*border: 1px solid rgba(0, 0, 0, 0.3);*/
